@@ -1,5 +1,9 @@
 2008-02-09  Sven Herzberg  <sven@imendio.com>
 
+	* src/monkey/playground.c: (playground_init): use G_DEFINE_TYPE
+
+2008-02-09  Sven Herzberg  <sven@imendio.com>
+
 	* src/net/game-manager-proxy.c: (net_game_manager_proxy_init): use
 	G_DEFINE_TYPE
 
